...
import { Formik } from 'formik';
import * as Yup from 'yup';
import { useAppStateContext } from '../contexts/AppState';
import { users } from '../services/users';

const validationSchema = Yup.object({
  username: Yup.string().required('You must specify an username'),
  password: Yup.string()
    .min(6, 'Password must be at least 6 characters')
    .max(64, 'Password must be less than 64 characters')
    .required('You must specify a password'),
  passwordVerify: Yup.string().oneOf([Yup.ref('password'), null], 'Passwords must match'),
});

export function Register({ navigation }) {
  const { setToken } = useAppStateContext();

  // Password box state and functions
...
    try {
      const token = await users.register(username, password);
      setLoading(false);

      setToken(token);
      await AsyncStorage.setItem('@token', token);
      navigation.navigate('Home');
    } catch (e) {
      setLoading(false);
      setBackendError(e.toString());
    }
  };

...
          </ScrollView>
          <Flex pb={4} px={4} pt={1} direction="row" justify="space-between" mt={5}>
            <Button colorScheme="secondary" onPress={() => navigation.navigate('Welcome')}>
              Back
            </Button>
            <Button colorScheme="primary" onPress={handleSubmit}>
              Register
            </Button>
          </Flex>
        </Flex>
      )}
    </Formik>
  );
...
