...
                text1: 'Story list reloaded',
                position: 'bottom',
              });
            }}
          />
          <IconButton
            testID={'options'}
            size={'lg'}
            _icon={{
              as: MaterialIcons,
              name: 'more-vert',
            }}
            onPress={() => setPopupOpened(true)}
...
        <Button
          onPress={() => {
            setPopupOpened(false);
            navigation.navigate('UserStories');
          }}
        >
          My stories
        </Button>
        <View style={styles.separator} />
        <Button
          colorScheme={'secondary'}
          onPress={() => {
            setPopupOpened(false);
            setHistory(null);
            AsyncStorage.removeItem('@token').then(() => navigation.navigate('Welcome'));
          }}
        >
          Disconnect me
        </Button>
      </View>
    );
  };

  return (
    //  Main home view
    <SafeAreaView style={styles.container}>
      <StoriesComponent onPressStory={onPressStory} stories={stories} />
      {token !== '' && (
        <IconButton
          testID={'addStoryButton'}
          style={styles.addButton}
          onPress={() => navigation.navigate('StoryCreation')}
          size={'lg'}
          variant="solid"
          colorScheme="primary"
          _icon={{
...
