...
          <Heading fontSize="4xl" color="primary.400">
            My App
          </Heading>
        </Flex>
        <Box p="2" w="90%" py="8" colorScheme="secondary">
          <Button mt="2" onPress={() => navigation.navigate('Register')}>
            Sign up
          </Button>
          <Button mt="2" onPress={() => navigation.navigate('Login')} colorScheme="secondary">
            Login
          </Button>
          <Text underline mt={2} textAlign="center" color="info.600" onPress={asGuest}>
            Continue as guest
          </Text>
        </Box>
      </Flex>
    </View>
  );
}
...
